make css more like bootstrap 3's optional theme

--- a/bootstrap/_variables-classicish.scss
+++ b/bootstrap/_variables-classicish.scss
@@ -28,7 +28,7 @@ $enable-responsive-font-sizes: true;
 $secondary: $gray-200;
 $enable-hover-media-query: true;
 $enable-shadows: false;
-$enable-gradient: true;
+$enable-transitions: false;
 $link-decoration: none;
 $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 0.875rem;
