--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -38,7 +38,7 @@
 		{% endif %}
 		<hr/>
 		<h3>{{ __("News and updates") }}</h3>
-		<b><p class="text-danger">{{ __("URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.") }}</b></p>
+		<b><p class="text-danger">{{ __("URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.") }}</p></b>
 		<p class="blockquote-footer">{{ __("Gamerappa") }}</p>
 		<hr/>
 		<h3>{{ __("Featured videos") }}</h3>
