--- a/bootstrap/_variables-dark.scss
+++ b/bootstrap/_variables-dark.scss
@@ -41,6 +41,9 @@ $dark:          $gray-800 !default;
 
 $min-contrast-ratio:   2.15 !default;
 
+// Alerts
+$alert-bg-scale:                -25% !default;
+
 // Body
 
 $body-bg:                   $gray-900 !default;
@@ -54,8 +57,15 @@ $link-decoration:           none !default;
 // Fonts
 
 // stylelint-disable-next-line value-keyword-case
-$font-family-sans-serif:      Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $text-muted:                  $gray-600 !default;
+$font-size-base: 0.875rem;
+$h1-font-size: $font-size-base * 2.6;
+$h2-font-size: $font-size-base * 2.15;
+$h3-font-size: $font-size-base * 1.7;
+$h4-font-size: $font-size-base * 1.25;
+$h5-font-size: $font-size-base;
+$h6-font-size: $font-size-base * 0.85;
 
 // Tables
 
@@ -128,7 +138,6 @@ $pagination-disabled-border-color:  transparent !default;
 
 // Cards
 
-$card-cap-bg:                       $gray-700 !default;
 $card-bg:                           $gray-800 !default;
 
 // Popovers
@@ -176,4 +185,7 @@ $pre-color:                         inherit !default;
 
 // Accordion
 
-$accordion-button-active-bg:              darken($primary, 25%) !default;
+$accordion-button-active-bg:              darken($primary, 10%) !default;
+
+// Other
+$enable-transitions: false;
