--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -1,6 +1,11 @@
+$primary: #337ab7;
+$success: #5cb85c;
+$info: #5bc0de;
+$warning: #f0ad4e;
+$danger: #d9534f;
 $white: #fff;
-$gray-100: #F9F9F9;
-$gray-200: #ECECEC;
+$gray-100: #F8F8F8;
+$gray-200: #EEEEEE;
 $gray-300: #E2E2E2;
 $gray-400: #D3D3D3;
 $gray-500: #B4B4B4;
@@ -22,6 +27,14 @@ $dark: $gray-800;
 $enable-responsive-font-sizes: true;
 $secondary: $gray-200;
 $enable-hover-media-query: true;
-$enable-shadows: true;
+$enable-shadows: false;
+$enable-transitions: false;
 $link-decoration: none;
-$font-family-sans-serif: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-size-base: 0.875rem;
+$h1-font-size: $font-size-base * 2.6;
+$h2-font-size: $font-size-base * 2.15;
+$h3-font-size: $font-size-base * 1.7;
+$h4-font-size: $font-size-base * 1.25;
+$h5-font-size: $font-size-base;
+$h6-font-size: $font-size-base * 0.85;
