--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -39,6 +39,7 @@
 		<hr/>
 		<h3>{{ __("News and updates") }}</h3>
 		<b><p class="text-danger">{{ __("URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.") }}</p></b>
+		<p>{{ __("Due to revivals now having a lower reputation, we have decided to scrap 2006L and replace it with sbNext. Also, we're most likely not going to bother importing any PokTube videos onto squareBracket.") }}</p>
 		<p class="blockquote-footer">{{ __("Gamerappa") }}</p>
 		<hr/>
 		<h3>{{ __("Featured videos") }}</h3>
