--- a/templates/default/components/pagination.twig
+++ b/templates/default/components/pagination.twig
@@ -7,7 +7,7 @@
 		{% endif %}
 		{% for i in 1..total %}
 			{% if 0 == (current - nearbyPagesLimit) - loop.index %}
-				<li class="page-item"><a href="{{ (app.request.pathInfo ~ '?' ~ (app.request.query.all|merge({(pageQueryParam): 1})|url_encode))|e }}" class="page-link">1</a></li>
+				<li class="page-item"><a href="{{ (app.request.pathInfo ~ '?' ~ (app.request.query.all ~ "page=" ~ 1 |url_encode))|e }}" class="page-link">1</a></li>
 				{% if 1 != loop.index %}
 					<li class="page-item">
 						<a href="javascript:void(0)" class="page-link">...</a>
@@ -26,7 +26,7 @@
 			{% endif %}
 		{% endfor %}
 		{% if current != total  and (current + nearbyPagesLimit) < total %}
-			<li class="page-item"><a href="{{ (app.request.pathInfo ~ '?' ~ (app.request.query.all|merge({(pageQueryParam): total})|url_encode))|e }}" class="page-link">{{ total }}</a></li>
+			<li class="page-item"><a href="{{ (app.request.pathInfo ~ '?' ~ (app.request.query.all ~ "page=" ~ total |url_encode))|e }}" class="page-link">{{ total }}</a></li>
 		{% endif %}
 		{% if current < total %}
 			<li><a class="page-link" href="{{ (url ~ (current+1))|e }}">&raquo;</a></li>
