--- a/bootstrap/bs-dark.scss
+++ b/bootstrap/bs-dark.scss
@@ -1,3 +1,3 @@
-@import "bootstrap/_variables-dark.scss";
-@import "vendor/twbs/bootstrap/scss/bootstrap.scss";
-@import "bootstrap/custom-dark.scss";
+@import "_variables-dark.scss";
+@import "../vendor/twbs/bootstrap/scss/bootstrap.scss";
+@import "custom-dark.scss";
