--- a/bootstrap/bs.scss
+++ b/bootstrap/bs.scss
@@ -1,3 +1,3 @@
-@import "bootstrap/_variables.scss";
-@import "vendor/twbs/bootstrap/scss/bootstrap.scss";
-@import "bootstrap/custom.scss";
+@import "_variables.scss";
+@import "../vendor/twbs/bootstrap/scss/bootstrap.scss";
+@import "custom.scss";
