progress on sbnext

--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -13,8 +13,20 @@
             </a>
         </div>
     </div>
+    <div id="nav">
+        <div id="nav-links">
+            <a href="/" class="nav-link nav-selected">Home</a>
+            <a href="/browse.php?frontend=new" class="nav-link">Browse</a>
+            <a href="" class="nav-link">Community</a>
+        </div>
+    </div>
 <div id="content">
 {% block content %}{% endblock %}
+<center>
+<h4>squareBracket Alpha 3.5/sbNext Preview</h4>
+<p>By squareBracket contributors · 2020-2021</p>
+<p>Based on the GoodTube website by Diyamund. CSS used with permission.</p>
+</center>
 </div>
 </body>
 </html> 
