--- a/templates/new/index.twig
+++ b/templates/new/index.twig
@@ -1,15 +1,23 @@
 {% extends "_layout.twig" %}
 {% block content %}
-<h1>squareBracket</h1>
-<button type="button" class="btn btn-grey">Button 1</button>
-<button type="button" class="btn btn-blue">Button 2</button> 
 <div class="row">
+<div class="col-8">
+<h1>Recently uploaded to squareBracket</h1>
 {% for video in videos %}
 	{{ video_box(video) }}
 {% else %}
 	<p>{{ __("No uploaded videos.") }}</p>
 {% endfor %}
 </div>
+<div class="col-4">
+<h3>Welcome to squareBracket</h3>
+<p>Yet another website where you can upload your videos.</p>
+<a href="register.php" class="btn btn-blue">Get started</a>
+<a href="login.php" class="btn btn-grey">Sign in</a>
+<hr>
+<h3>News and updates</h3>
+<p class="text-danger">URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.</p>
+<p>Due to revivals now having a lower reputation, we have decided to scrap 2006L and replace it with sbNext. Also, we're most likely not going to bother importing any PokTube videos onto squareBracket.</p>
+</div></div>
 <br><br>
-<div class="alert">Woah.</div>
 {% endblock %}
