--- a/testing_new_css/main.css
+++ b/testing_new_css/main.css
@@ -22,6 +22,12 @@ body {
 
 .row {
     *zoom: 1;
+	display: flex;
+}
+
+.row > * {
+	padding-right: calc(1.5rem / 2);
+	padding-left: calc(1.5rem / 2);
 }
 
 .row::before {
@@ -65,9 +71,9 @@ body {
 }
 
 #header-logo {
-    background: url('../assets/logo.png');
+    background: url('../assets/logo-wordmark-sbnext.png');
     height: 32px;
-    width: 32px;
+    width: 91px;
     background-size: auto 32px;
     opacity: .5;
 }
@@ -122,7 +128,7 @@ a:hover #header-logo {
     background: linear-gradient(#292929, #252525);
     color: white;
     font-weight: bold;
-    border-bottom: 3px solid #c4302b !important;
+    border-bottom: 3px solid #2f96ff !important;
 }
 
 #content {
