replace "welcome to sb" box with member login box
make it functional later

--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>Page Title</title>
-<link rel="stylesheet" href="/testing_new_css/main.css"> 
+<link rel="stylesheet" href="/assets/main.css"> 
 </head>
 <body>
 <div id="header">
