--- a/templates/new/index.twig
+++ b/templates/new/index.twig
@@ -10,10 +10,30 @@
 {% endfor %}
 </div>
 <div class="col-4">
-<h3>Welcome to squareBracket</h3>
-<p>Yet another website where you can upload your videos.</p>
-<a href="register.php" class="btn btn-blue">Get started</a>
-<a href="login.php" class="btn btn-grey">Sign in</a>
+<div class="card" style="margin-bottom:4px">
+<h3>Member Login (make this look good later)</h3>
+    <form class="form-horizontal">
+      <div class="control-group">
+        <label class="control-label" for="inputEmail">Email</label>
+        <div class="controls">
+          <input type="text" id="inputEmail" placeholder="Email">
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="inputPassword">Password</label>
+        <div class="controls">
+          <input type="password" id="inputPassword" placeholder="Password">
+        </div>
+      </div>
+      <div class="control-group">
+        <div class="controls">
+          <button type="submit" class="btn btn-grey">Sign in</button>
+        </div>
+      </div>
+    </form>
+	Don't have an account?
+<a href="register.php" class="btn btn-blue">Register</a>
+</div>
 <hr>
 <h3>News and updates</h3>
 <p class="text-danger">URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.</p>
