--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -25,7 +25,7 @@
 <center>
 <h4>squareBracket Alpha 3.5/sbNext Preview</h4>
 <p>By squareBracket contributors · 2020-2021</p>
-<p>Based on the GoodTube website by Diyamund. CSS used with permission.</p>
+<p>CSS based on the GoodTube website by Diyamund.</p>
 </center>
 </div>
 </body>
