--- a/templates/new/index.twig
+++ b/templates/new/index.twig
@@ -11,22 +11,20 @@
 </div>
 <div class="col-4">
 <div class="card" style="margin-bottom:4px">
-<h3>Member Login (make this look good later)</h3>
+<h3>Member Login (non-functional)</h3>
     <form class="form-horizontal">
       <div class="control-group">
-        <label class="control-label" for="inputEmail">Email</label>
         <div class="controls">
           <input type="text" id="inputEmail" placeholder="Email">
         </div>
       </div>
       <div class="control-group">
-        <label class="control-label" for="inputPassword">Password</label>
         <div class="controls">
           <input type="password" id="inputPassword" placeholder="Password">
         </div>
       </div>
       <div class="control-group">
-        <div class="controls">
+        <div class="controls text-end">
           <button type="submit" class="btn btn-grey">Sign in</button>
         </div>
       </div>
