add sbNext watchpage, extremely pre-limeary

--- a/assets/main.css
+++ b/assets/main.css
@@ -18,6 +18,21 @@ body {
     text-align: left !important;
 }
 
+.text-danger {
+	font-weight: bold;
+	color: maroon;
+}
+
+.uploader-info {
+    color: #666;
+    font-size: 0.9166em;
+}
+
+a {
+    color: #1c62b9;
+	text-decoration: none;
+}
+
 textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
     background-color: #ffffff;
     border: 1px solid #cccccc;
