--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -2,20 +2,21 @@
 <html lang="en">
 <html>
 <head>
-<title>Page Title</title>
+<meta charset="utf-8">
+<title>sbNext</title>
 <link rel="stylesheet" href="/assets/main.css"> 
 </head>
 <body>
 <div id="header">
         <div id="header-links">
-            <a width="121" height="32" href="/">
+            <a width="121" height="32" href="index.php?frontend=new">
                 <div id="header-logo"></div>
             </a>
         </div>
     </div>
     <div id="nav">
         <div id="nav-links">
-            <a href="/" class="nav-link nav-selected">Home</a>
+            <a href="index.php?frontend=new" class="nav-link nav-selected">Home</a>
             <a href="/browse.php?frontend=new" class="nav-link">Browse</a>
             <a href="" class="nav-link">Community</a>
         </div>
