--- a/templates/new/components/videobox.twig
+++ b/templates/new/components/videobox.twig
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col col-4">
 				<a href="watch.php?v={{ data.video_id }}&frontend=new">
-					<div class="card">
+					<div class="card card-info">
 						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 					</div>
 				</a>
