--- a/templates/new/index.twig
+++ b/templates/new/index.twig
@@ -11,11 +11,11 @@
 </div>
 <div class="col-4">
 <div class="card" style="margin-bottom:4px">
-<h3>Member Login (non-functional)</h3>
+<h3 class="small-margin">Login (non-functional)</h3>
     <form class="form-horizontal">
       <div class="control-group">
         <div class="controls">
-          <input type="text" id="inputEmail" placeholder="Email">
+          <input type="text" id="inputEmail" placeholder="Username">
         </div>
       </div>
       <div class="control-group">
@@ -29,10 +29,9 @@
         </div>
       </div>
     </form>
-	Don't have an account?
-<a href="register.php" class="btn btn-blue">Register</a>
-</div>
 <hr>
+<div class="text-center">Don't have an account? <a href="register.php" class="btn btn-small btn-blue">Sign up</a></div>
+</div>
 <h3>News and updates</h3>
 <p class="text-danger">URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.</p>
 <p>Due to revivals now having a lower reputation, we have decided to scrap 2006L and replace it with sbNext. Also, we're most likely not going to bother importing any PokTube videos onto squareBracket.</p>
