--- a/templates/default/register.twig
+++ b/templates/default/register.twig
@@ -7,38 +7,33 @@
 	<div class="alert alert-danger" role="alert">{{ error }}</div>
 {% endif %}
 
-<main class="text-center">
+<main class="form-signin">
 <div class="container">
 </div>
+<!-- HOLY SHIT the page looked broken for a while.
+register page should be merged with login page on sbnext 
+-gamerappa 7/10/2021 -->
   <form method="post" name="registerForm" id="registerForm" action="register.php">
-	<div class="text-center">
-    <img class="mb-2 gamerappa-killed-the-render-star" src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png" alt="squareBracket">
-	</div>
-<h2>Register</h2>
+    <img class="mb-4" src="/assets/logo.png" alt="squareBracket" width="72">
 <form method="POST">
-<div class="form-signin god-is-dead text-center">
 	<div class="form-floating">
 		<input type="text" name="username" class="form-control" id="floatingUsername" placeholder="">
-		<label for="floatingUsername">{{ icon('person-fill', 24) }} {{ __("Username") }}
-		</label>
+		<label for="floatingUsername">{{ __("Username") }}</label>
     </div>
 	<div class="form-floating">
 		<input type="email" name="email" class="form-control" id="floatingEmail" placeholder="">
-		<label for="floatingEmail">{{ icon('mailbox2', 24) }} {{ __("E-mail") }}
-		</label>
+		<label for="floatingEmail">{{ __("E-mail") }}</label>
     </div>
 	<div class="form-floating">
 		<input type="password" name="pass1" class="form-control" id="floatingPass" placeholder="">
-		<label for="floatingPass">{{ icon('key-fill', 24) }} {{ __("Password") }}
-		</label>
+		<label for="floatingPass">{{ __("Password") }}</label>
     </div>
 	<div class="form-floating">
 		<input type="password" name="pass2" class="form-control" id="floatingPass2" placeholder="">
-		<label for="floatingPass2">{{ icon('key-fill', 24) }} {{ __("Password (Again)") }}
-		</label>
+		<label for="floatingPass2">{{ __("Password (Again)") }}</label>
     </div>
 	<button class="w-100 btn btn-lg btn-primary" type="submit" name="action" class="btn btn-primary">{{ __("Register") }}</button>
-</div>
+	<p class="mt-5 mb-3 text-muted">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
 </form>
 </main>
 	{% endblock %}
