i honestly don't even fucking know

--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -12,6 +12,7 @@
             <a width="121" height="32" href="index.php?frontend=new">
                 <div id="header-logo"></div>
             </a>
+			<a href="gordon.php?frontend=new" class="btn btn-blue header-right">Login</a>
         </div>
     </div>
     <div id="nav">
